# citybuilder

./: LICENSE  README.md  animation_handler.cpp  animation_handler.hpp  city.cpp  city.hpp  game.cpp  game.hpp  game_state.hpp  game_state_editor.cpp  game_state_editor.hpp  game_state_start.cpp  game_state_start.hpp  gui.cpp  gui.hpp  main.cpp  map.cpp  map.hpp  texture_manager.cpp  texture_manager.hpp  tile.cpp  tile.hpp
Part 1 - State Manager/: game.cpp  game.hpp  main.cpp
Part 10 - Putting it All Together/: city.cpp  game.hpp  game_state_editor.cpp  game_state_editor.hpp
Part 2 - The First State/: game.cpp  game_state_editor.cpp  game_state_start.cpp
Part 3 - Textures and Animations/: game.cpp  game.hpp  texture_manager.hpp
Part 4 - Tiles/: game.hpp  game_state_start.cpp  game_state_start.hpp  texture_manager.cpp
Part 5 - The Game World/: game_state_editor.hpp  map.cpp
Part 6 - Exploring the World/: game.cpp  game_state_editor.cpp  game_state_editor.hpp  map.cpp  map.hpp
Part 7 - Tile Selection/: game_state_editor.cpp  game_state_editor.hpp  map.cpp
Part 8 - GUI System/: game_state_start.hpp
Part 9 - A Complete City/: CMakeLists.txt  city.cpp  gui.cpp  map.hpp  tile.cpp
tutorial/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md
